more copy-paste checks